--- a/25_paskaita/style.css
+++ b/25_paskaita/style.css
@@ -42,6 +42,10 @@ body {
   margin: 0;
 }
 
+.todo-title.done {
+  color: lightgray;
+}
+
 .todo-status {
   padding: 12px;
   background-color: #aaaaaa;
