Add DOM manipulation examples

--- a/19_paskaita/style.css
+++ b/19_paskaita/style.css
@@ -1,3 +1,30 @@
 form > * {
   margin-bottom: 20px;
 }
+
+div {
+}
+
+.card {
+}
+
+#price {
+}
+
+.card div {
+}
+
+.card img {
+}
+
+.card > * {
+}
+
+.card > div {
+}
+
+.card div img {
+}
+
+h2:last-child {
+}
